      and ->Thaw on the main window, breaking the resource locked (ADAMK)
    - Fixed ticket #847: "Implement Mozilla-style about:config for Padre"
      (AZAWAWI)
    - Fixed ticket #845: Fix relative filenames from commandline (SEWI)
    - Added "Open In Command Line" to File menu (AZAWAWI)
    - Renamed Plugins menus to Tools and moved Preferences into it (ADAMK)

0.56 2010.02.01
    - Plugins may now add their GUI elements to the view menu (SEWI)
    - Padre now displays a dynamic to-do list generated from comments
      in your source code (CORION)
    - Landed new Padre::Startup module which is dramatically faster
      when loading files into an existing Padre via the single instance
      server, and finally provides a mechanism for allowing configuration
      to disable the startup splash image (ADAMK)
    - Changed a few configuration settings to create a more consistent
      naming pattern for them (ADAMK)
    - Audited dependencies and updated a variety of them (ADAMK)
    - Ctrl-Shift-W is now bound to "Close This Project" (ADAMK)
    - Added an option for traceing Padre subroutine calls to the
      developer plugin (SEWI)
    - Uses correct make from Config.pm for the run menu item -> Build and
      run tests (KTHAKORE)
    - Speedup and less false-shows for autocomplete (SEWI)
    - Speedup while changing tabs (use the correct project dir) (SEWI)
    - Simple refocus on document after command run (KTHAKORE)
    - Fixed ticket #822: main window could be off screen on start (BLAKEW)
    - padre-client allows you to use Padre for commit messages and other
      synchronous edit events (CORION)
    - WIN32, Converted the --desktop registry code to Win32::TieRegistry 
      and removed hardcoded strawberry paths (AZAWAWI)
    - WIN32, padre.exe will run with the same UAC privileges as same as
      the invoker (AZAWAWI)
    - Disable debugger menu items when there is no document (AZAWAWI)